# pmr

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
bench/: bench.sh  soak.sh
docs/: benchmarks.md  cli.md  comparison.md  configuration.md  getting-started.md  library.md  production.md
examples/: programmatic.rs
src/: client.rs  config.rs  ipc.rs  lib.rs  main.rs  paths.rs
src/cli/: commands.rs  logs.rs  mod.rs  startup.rs  table.rs
src/daemon/: cron.rs  dump.rs  health.rs  logs.rs  mod.rs  ops.rs  rpc.rs  state.rs  supervisor.rs  watcher.rs  worker.rs
src/monit/: mod.rs
tests/: e2e.rs
