[package]
name = "pmr"
version = "0.3.0"
edition = "2024"
description = "Fast, memory-efficient process manager — pm2 rewritten in Rust. Single binary, CLI + library."
license = "MIT"
authors = ["zdanysfa"]
repository = "https://github.com/zdanysfa/pmr"
homepage = "https://github.com/zdanysfa/pmr"
documentation = "https://pmr-b456514d.mintlify.site"
readme = "README.md"
keywords = ["process-manager", "daemon", "pm2", "supervisor"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "pmr"
path = "src/lib.rs"

[[bin]]
name = "pmr"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "net", "io-util", "sync", "time", "signal", "fs"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
notify = "8"
sysinfo = "0.35"
croner = "2"
nix = { version = "0.29", features = ["signal", "user", "fs"] }
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
comfy-table = "7"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
